--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "format": "prettier --write src"
+    "build-storybook": "build-storybook && cp ./src/components/icon/bootstrap-icons.svg ./storybook-static/",
+    "format": "prettier --write src stories example"
   },
   "peerDependencies": {
     "bootstrap-icons": ">=1.0.0",
@@ -42,12 +42,12 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@size-limit/preset-small-lib": "^4.6.0",
-    "@storybook/addon-controls": "^6.0.26",
-    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-controls": "^6.1.10",
+    "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.0.26",
-    "@storybook/addons": "^6.0.26",
-    "@storybook/react": "^6.0.26",
+    "@storybook/addon-links": "^6.1.10",
+    "@storybook/addons": "^6.1.10",
+    "@storybook/react": "^6.1.10",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.4",
