--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@rollup/plugin-url": "^6.0.0",
     "@size-limit/preset-small-lib": "^4.6.0",
     "@storybook/addon-controls": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.10",
